force-app/main/default/objects/Reimbursement_Request__c/Reimbursement_Request__c.object-meta.xml
<CustomObject>
    <label>Reimbursement Request</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Reimbursement Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reimbursement Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>