force-app/main/default/objects/Reimbursement_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Type__c</field>
            <operation>equals</operation>
            <value>Engineer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reimbursement Requests</relationshipLabel>
    <relationshipName>Reimbursement_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>